src/test/ui/associated-types/hr-associated-type-bound-1.stderr
error[E0277]: the trait bound `for<'b> <i32 as X<'b>>::U: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-1.rs:12:14
   |
LL | trait X<'a>
   |       - required by a bound in this
LL | where
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `for<'b> Clone` is not implemented for `<i32 as X<'b>>::U`
   |
   = help: the following implementations were found:
             <&T as Clone>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
